# stm32l152c-blinky

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: main.rs
